Requisitos e Lint Completos

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <form class="trybewarts-login" method="">
         <input type="email" id="email" name="email" placeholder="Email" />
         <input type="password" id="pass" name="password" placeholder="Senha" />
-        <button type="button" onclick="verificaSenha()">Entrar</button>
+        <button type="button" id="btnLogin" onclick="verificaSenha()">Entrar</button>
       </form>
     </header>
     <main>
